revision de vistas de arturo

--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidashow.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidashow.html
@@ -80,7 +80,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <br>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">Código:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${caparecibida.codigocaparecibidas}">codigo de Empleado</p></div>
                         </div>
@@ -105,7 +105,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div> 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Pais:</label>
+                            <label class="col-sm-7 control-label">País:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${caparecibida.pais}">Telefono Movil de Empleado</p>
                             </div>
@@ -117,13 +117,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Duracion Horas:</label>
+                            <label class="col-sm-7 control-label">Duración Horas:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${caparecibida.dhoras}">Email Empleado</p>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Duracion Dias:</label>
+                            <label class="col-sm-7 control-label">Duración Dias:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${caparecibida.ddias}">Email Empleado</p>
                             </div>
