--- a/src/main/resources/templates/fragments/contacto/contactoshow.html
+++ b/src/main/resources/templates/fragments/contacto/contactoshow.html
@@ -80,7 +80,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <br>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">Código:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${contacto.codigocontacto}">codigo de Empleado</p></div>
                         </div>
@@ -97,7 +97,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Direccion:</label>
+                            <label class="col-sm-5 control-label">Dirección:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${contacto.direccion}">Fecha de Nacimiento</p>
                             </div>
@@ -111,7 +111,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Telefono Movil:</label>
+                            <label class="col-sm-7 control-label">Telefono Móvil:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${contacto.telefonomovilcontacto}">DUI</p>
                             </div>
