--- a/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Nombre Capacitacion:</label>
+                        <label class="col-sm-2 control-label">Nombre Capacitación:</label>
                         <div class="col-sm-8">
                         <select class="form-control" name="capacitacion.codigocapacitacion" >
                                 <option th:each="c:${formempleadocapacitacion.capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
