--- a/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
@@ -99,7 +99,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
             </div>
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Nombre de Institucion(*):</label>
+                    <label class="col-sm-3 control-label">Nombre de Institución(*):</label>
                     <div class="col-sm-5">
                         <input type="text" class="form-control"  required="true" size="50" maxlength="50"  th:field="*{nombreinstitucion}"  />
                     </div>
