--- a/src/main/resources/templates/fragments/mision/misionform.html
+++ b/src/main/resources/templates/fragments/mision/misionform.html
@@ -63,7 +63,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <!--<input type="hidden" th:field="*{nombremision}"/>-->
            <div class="col-md-12">
            <div class="form-group">
-                <label class="col-sm-3 control-label">Tipo de Mision(*):</label>
+                <label class="col-sm-3 control-label">Tipo de Misión(*):</label>
                 <div class="col-sm-2">
                     <select class="form-control" name="tipomision" id="tipomision">
                         <option value="0">Externa</option>
@@ -75,22 +75,22 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup5')" onmouseout ="javascript:ocultarAyuda('poppup5')">a</a></b>
                         
-                        <span class="popuptext" id="poppup5">Seleccione el tipo de Mision a registrar desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup5">Seleccione el tipo de Misión a registrar desplegando la lista.!</span>
                     </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Nombre de Mision(*):</label>
+                <label class="col-sm-3 control-label">Nombre de Misión(*):</label>
                 <div class="col-sm-5">
                     <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{nombremision}" />
                 </div>
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup2')" onmouseout ="javascript:ocultarAyuda('poppup2')">a</a></b>
                         
-                        <span class="popuptext" id="poppup2">Ingrese el Nombre de la Mision solo se admitiran 50 caracteres.!</span>
+                        <span class="popuptext" id="poppup2">Ingrese el Nombre de la Misión solo se admitiran 50 caracteres.!</span>
                     </div>
             </div>
                 <div class="form-group">
-                <label class="col-sm-3 control-label">Objetivo de Mision(*):</label>
+                <label class="col-sm-3 control-label">Objetivo de Misión(*):</label>
                 <div class="col-sm-5">
                     <!--<input type="text" step="0.01" class="form-control" required="true" size="100" maxlength="100" th:field="*{objetivomision}"/>-->
                     <textarea rows="4" cols="50" class="form-control" size="100" maxlength="100"  required="true" th:field="*{objetivomision}">
@@ -100,7 +100,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup3')" onmouseout ="javascript:ocultarAyuda('poppup3')">a</a></b>
                         
-                        <span class="popuptext" id="poppup3">Ingrese el Objetivo de la Mision solo se admitiran 100 caracteres.!</span>
+                        <span class="popuptext" id="poppup3">Ingrese el Objetivo de la Misión solo se admitiran 100 caracteres.!</span>
                     </div>
             </div>
 <!--             <div class="form-group">
@@ -138,7 +138,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup7')" onmouseout ="javascript:ocultarAyuda('poppup7')">a</a></b>
                         
-                        <span class="popuptext" id="poppup7">Ingrese los Viaticos de la Mision solo se admitiran dos decimales caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup7">Ingrese los Viaticos de la Misión solo se admitiran dos decimales caracteres numericos.!</span>
                     </div>
             </div>
             <div class="form-group">
@@ -149,7 +149,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup77')" onmouseout ="javascript:ocultarAyuda('poppup77')">a</a></b>
                         
-                        <span class="popuptext" id="poppup77">Ingrese los Gastos de Viaje de la Mision solo se admitiran dos decimales caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup77">Ingrese los Gastos de Viaje de la Misión solo se admitiran dos decimales caracteres numericos.!</span>
                     </div>
             </div>
 <div class="form-group">
@@ -160,7 +160,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup78')" onmouseout ="javascript:ocultarAyuda('poppup78')">a</a></b>
                         
-                        <span class="popuptext" id="poppup78">Ingrese los Gastos de terminales de la Mision solo se admitiran dos decimales caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup78">Ingrese los Gastos de terminales de la Misión solo se admitiran dos decimales caracteres numericos.!</span>
                     </div>
             </div>
             <div class="form-group">
@@ -172,11 +172,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                  <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup4')" onmouseout ="javascript:ocultarAyuda('poppup4')">a</a></b>
                         
-                        <span class="popuptext" id="poppup4">Seleccione o digite la Fecha de Salida de la Mision el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup4">Seleccione o digite la Fecha de Salida de la Misión el formtado debe ser  dia/mes/año .!</span>
                     </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Pais(*):</label>
+                <label class="col-sm-3 control-label">País(*):</label>
                 <div class="col-sm-4">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                     <!--<select class="form-control" name="ubicacionpuesto" th:field="*{ubicacion}">-->
@@ -190,7 +190,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup14')" onmouseout ="javascript:ocultarAyuda('poppup14')">a</a></b>
                         
-                        <span class="popuptext" id="poppup14">Seleccione el pais en le que se realizara la Mision desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup14">Seleccione el país en le que se realizara la Mision desplegando la lista.!</span>
                     </div>
             </div>
     <div class="form-group">
@@ -208,7 +208,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup15')" onmouseout ="javascript:ocultarAyuda('poppup15')">a</a></b>
                         
-                        <span class="popuptext" id="poppup15">Seleccione el Organismo Patrocinador de la Mision desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup15">Seleccione el Organismo Patrocinador de la Misión desplegando la lista.!</span>
                     </div>
             </div>
 
@@ -223,7 +223,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                   <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup25')" onmouseout ="javascript:ocultarAyuda('poppup25')">a</a></b>
                         
-                        <span class="popuptext" id="poppup25">Ingrese la ciudad de odnde se realizara la Mision solo se admitiran 50 caracteres .!</span>
+                        <span class="popuptext" id="poppup25">Ingrese la ciudad de odnde se realizara la Misión solo se admitiran 50 caracteres .!</span>
                     </div>
             </div>
                  
@@ -237,7 +237,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                   <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup476')" onmouseout ="javascript:ocultarAyuda('poppup476')">a</a></b>
                         
-                        <span class="popuptext" id="poppup476">Seleccione o digite la Fecha de Regreso de la Mision el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup476">Seleccione o digite la Fecha de Regreso de la Misión el formtado debe ser  dia/mes/año .!</span>
                     </div>
             </div>
               
@@ -251,7 +251,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup477')" onmouseout ="javascript:ocultarAyuda('poppup477')">a</a></b>
                         
-                        <span class="popuptext" id="poppup477">Seleccione o digite la Fecha de Acuerdo de la Mision el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup477">Seleccione o digite la Fecha de Acuerdo de la Misión el formtado debe ser  dia/mes/año .!</span>
                     </div>
            </div>
              
@@ -265,7 +265,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup487')" onmouseout ="javascript:ocultarAyuda('poppup487')">a</a></b>
                         
-                        <span class="popuptext" id="poppup487">Selecione el archivo PDF del Acuerdo obtenido para la Mision hacer click en el boton selecionar archivo .!</span>
+                        <span class="popuptext" id="poppup487">Selecione el archivo PDF del Acuerdo obtenido para la Misión hacer click en el boton selecionar archivo .!</span>
                     </div>
                 </div>
 <!--                    <div class="form-group">
@@ -288,7 +288,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup16')" onmouseout ="javascript:ocultarAyuda('poppup16')">a</a></b>
                         
-                        <span class="popuptext" id="poppup16">Ingrese el Numero de Boleto Aereo de la Mision solo se admitiran 20 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup16">Ingrese el Numero de Boleto Aereo de la Misión solo se admitiran 20 caracteres numericos.!</span>
                     </div>
             </div>
                   <div class="form-group">
@@ -299,7 +299,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup165')" onmouseout ="javascript:ocultarAyuda('poppup165')">a</a></b>
                         
-                        <span class="popuptext" id="poppup165">Ingrese el Numero de Boleto Terrestre de la Mision solo se admitiran 20 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup165">Ingrese el Numero de Boleto Terrestre de la Misión solo se admitiran 20 caracteres numericos.!</span>
                     </div>
                 
             </div>
@@ -312,7 +312,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup169')" onmouseout ="javascript:ocultarAyuda('poppup169')">a</a></b>
                         
-                        <span class="popuptext" id="poppup169">Ingrese el Numero de dias que durara la Mision solo se admitiran 20 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup169">Ingrese el Numero de dias que durara la Misión solo se admitiran 20 caracteres numericos.!</span>
                     </div>
                 
                 
@@ -326,7 +326,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup168')" onmouseout ="javascript:ocultarAyuda('poppup168')">a</a></b>
                         
-                        <span class="popuptext" id="poppup168">Ingrese el Numero de meses que durara la Mision solo se admitiran 20 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup168">Ingrese el Numero de meses que durara la Misión solo se admitiran 20 caracteres numericos.!</span>
                     </div>
                 
             </div>
