--- a/src/main/resources/templates/fragments/puesto/puestoshow.html
+++ b/src/main/resources/templates/fragments/puesto/puestoshow.html
@@ -23,7 +23,7 @@
             <form class="form-horizontal">
                  <div class="col-md-6">
                      <div class="form-group">
-                    <label class="col-sm-5 control-label">codigo:</label>
+                    <label class="col-sm-5 control-label">Código:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${puesto.codigopuesto}">codigo de Puesto</p></div>
                 </div>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-5 control-label">Codigo de Cargo:</label>
+                    <label class="col-sm-5 control-label">Código de Cargo:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${puesto.codigocargopuesto}">Codigo de Cargo</p>
                     </div>
@@ -48,21 +48,21 @@
                   </div> 
                       <div class="col-md-6">
                           <div class="form-group">
-                    <label class="col-sm-7 control-label">Fecha de Aprobacion:</label>
+                    <label class="col-sm-7 control-label">Fecha de Aprobación:</label>
                     <div class="col-sm-5">
                         <p class="form-control-static" th:text="${puesto.fechaaprobacion}">Fecha de Aprobacion</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-7 control-label">Fecha de Contratacion Desde:</label>
+                    <label class="col-sm-7 control-label">Fecha de Contratación Desde:</label>
                     <div class="col-sm-5">
                         <p class="form-control-static" th:text="${puesto.fechacontrataciondesde}">Fecha de Contratacion Desde</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-7 control-label">Fecha Contratacion Hasta:</label>
+                    <label class="col-sm-7 control-label">Fecha Contratación Hasta:</label>
                     <div class="col-sm-5">
-                        <p class="form-control-static" th:text="${puesto.fechacontratacionhasta}">Fecha Contratacion Hasta</p>
+                        <p class="form-control-static" th:text="${puesto.fechacontratacionhasta}">Fecha Contratación Hasta</p>
                     </div>
                 </div>
                 <div class="form-group">
