--- a/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
+++ b/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
@@ -80,7 +80,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <br>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">Código:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${ubicacionfisica.codigoubicacion}">codigo de Empleado</p></div>
                         </div>
