--- a/src/main/resources/templates/fragments/beneficio/beneficioshow2.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow2.html
@@ -34,7 +34,7 @@
                 
                 <div class="form-group">
                      <br>
-                    <label class="col-sm-2 control-label">código:</label>
+                    <label class="col-sm-2 control-label">Código:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.codigobeneficio}">Usuario Id</p></div>
                 </div>
