--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidasform.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidasform.html
@@ -71,7 +71,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="col-md-12" style="background-color:#d9edf7;">
                 <div class="panel-info">
                     <div class="panel-heading row text-center">
-                        <h3>Gestionando Informacion del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                        <h3>Gestionando Información del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
                     </div>
                 </div>
                  <input type="hidden" id="codem"  th:value="${empleado.codigoempleado}"/>
@@ -144,7 +144,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
             </div>
                    <div class="form-group">
-                    <label class="col-sm-3 control-label">Duracion Horas(*):</label>
+                    <label class="col-sm-3 control-label">Duración Horas(*):</label>
                     <div class="col-sm-1">
                         <input type="text" class="form-control numeros"  required="true"   th:field="*{dhoras}" />
                     </div>
@@ -155,7 +155,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                 </div>
                    <div class="form-group">
-                    <label class="col-sm-3 control-label">Duracion Dias(*):</label>
+                    <label class="col-sm-3 control-label">Duración Dias(*):</label>
                     <div class="col-sm-1">
                         <input type="text" class="form-control numeros"   required="true" th:field="*{ddias}"  />
                     </div>
