--- a/src/main/resources/templates/fragments/contacto/contactoform.html
+++ b/src/main/resources/templates/fragments/contacto/contactoform.html
@@ -72,7 +72,7 @@
             <div class="col-md-12" style="background-color:#d9edf7;">
                 <div class="panel-info">
                     <div class="panel-heading row text-center">
-                        <h3>Gestionando Informacion del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                        <h3>Gestionando Información del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
                     </div>
                 </div>
                  <input type="hidden" id="codem"  th:value="${empleado.codigoempleado}"/>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Direccion del Contacto(*):</label>
+                        <label class="col-sm-3 control-label">Dirección del Contacto(*):</label>
                         <div class="col-sm-8">
                             <!--<input type="text" class="form-control"  required="true" size="100" maxlength="100" th:field="*{direccion}"  />-->
                             <textarea rows="4" cols="50" class="form-control" size="100" maxlength="100"  required="true" th:field="*{direccion}">
@@ -121,7 +121,7 @@
                         <div class="popup "><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup3')" onmouseout ="javascript:ocultarAyuda('poppup3')">a</a></b>
 
-                            <span class="popuptext" id="poppup3">Ingrese la Direcion del Contacto del Empleado solo se admitiran 100 caracteres.!</span>
+                            <span class="popuptext" id="poppup3">Ingrese la Direción del Contacto del Empleado solo se admitiran 100 caracteres.!</span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -151,14 +151,14 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Telefono Movil del Contacto(*):</label>
+                        <label class="col-sm-3 control-label">Telefono Móvil del Contacto(*):</label>
                         <div class="col-sm-2">
                             <input type="text" class="form-control num_telefono" required="true"    th:field="*{telefonomovilcontacto}"  />
                         </div>
                         <div class="popup "><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup12')" onmouseout ="javascript:ocultarAyuda('poppup12')">a</a></b>
 
-                            <span class="popuptext" id="poppup12">Ingrese el telefono movil del Contacto del Empleado solo se admitiran 9 caracteres numericos.!</span>
+                            <span class="popuptext" id="poppup12">Ingrese el telefono móvil del Contacto del Empleado solo se admitiran 9 caracteres numericos.!</span>
                         </div>
                     </div>
                     <div class="form-group">
