--- a/src/main/resources/templates/fragments/dependiente/dependientes.html
+++ b/src/main/resources/templates/fragments/dependiente/dependientes.html
@@ -18,11 +18,11 @@
         <h3 align="center">Listado de contactos</h3>
         <table class="table table-striped">
             <tr >
-                <th>Codigo de Contacto</th>
+                <th>Código de Contacto</th>
                 <th>Nombre de  Contacto</th>
-                <th>Direccion</th>
+                <th>Dirección</th>
                 <th>Telefono Fijo</th>
-                <th>Telefono Movi</th>
+                <th>Telefono Móvi</th>
                 <th>Email</th>
             </tr>
             <tr th:each="empleado : ${empleados}">
