--- a/src/main/resources/templates/fragments/dependiente/dependienteshow.html
+++ b/src/main/resources/templates/fragments/dependiente/dependienteshow.html
@@ -71,7 +71,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="col-md-12" style="background-color:#d9edf7;">
                 <div class="panel-info">
                     <div class="panel-heading row text-center">
-                        <h3>Informacion de Dependiente del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
+                        <h3>Información de Dependiente del Empleado:  <label id="nomemp" class=" control-label" th:text="${empleado.nombreempleado} +' ' +${empleado.apellidoempleado}"></label> </h3>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
            <br>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">Código:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${dependiente.codigodependiente}">codigo de Empleado</p></div>
                         </div>
