--- a/src/main/resources/templates/fragments/empleado/empleadoscons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoscons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH-Listado de Empleados</title>
+        <title>Listado de Empleados</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
@@ -19,7 +19,7 @@
                 <table id="tablita" class="table table-striped table-bordered" >
                     <thead> 
                         <tr >
-                            <th>Codigo de Empleado</th>
+                            <th>Código de Empleado</th>
                             <th>Nombre de  Empleado</th>
                             <th>Fecha de Nacimiento</th>
                             <th>DUI</th>
