--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -30,7 +30,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">Código:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static"  th:text="${empleado.codigoempleado}">codigo de Empleado</p>
                             <input type="hidden" id="codem"  th:value="${empleado.codigoempleado}"/>
