--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Nombre Capacitacion:</label>
+                        <label class="col-sm-2 control-label">Nombre Capacitación:</label>
                         <div class="col-sm-8">
                         <select class="form-control" name="asistenciacapacitacion.codigoasistenciacapacitacion" id="asistencia" >
                                 <option th:each="c:${formasistenciaempleadocapacitacion.asistenciacapacitaciones}" th:value="${c.codigoasistenciacapacitacion}" th:text="${c.ubicacionasistenciacapacitacion}"></option>
