--- a/src/main/resources/templates/fragments/experiencialaboral/experienciashow.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experienciashow.html
@@ -80,7 +80,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <br>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo:</label>
+                            <label class="col-sm-5 control-label">Código:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${experiencialaboral.codigoexperiencialaboral}">codigo de Empleado</p></div>
                         </div>
@@ -91,7 +91,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Nombre Institucion</label>
+                            <label class="col-sm-5 control-label">Nombre Institución</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${experiencialaboral.nombreinstitucion}">Apellido de Empleado</p>
                             </div>
