--- a/src/main/resources/templates/fragments/mision/misionshow.html
+++ b/src/main/resources/templates/fragments/mision/misionshow.html
@@ -30,18 +30,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <form class="form-horizontal">
                  <div class="col-md-6">
                      <div class="form-group">
-                    <label class="col-sm-5 control-label">codigo:</label>
+                    <label class="col-sm-5 control-label">Código:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${mision.codigomision}">codigo de Mision</p></div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-5 control-label">Nombre de Mision:</label>
+                    <label class="col-sm-5 control-label">Nombre de Misión:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${mision.nombremision}">Nombre de Mision</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-5 control-label">Objetivo de Mision:</label>
+                    <label class="col-sm-5 control-label">Objetivo de Misión:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${mision.objetivomision}">Objetivo de Mision</p>
                     </div>
